@@ -40,18 +40,24 @@ namespace MonoDevelop.Components.Commands
 		object arrayDataItem;
 		ArrayList itemArray;
 		string lastIcon;
+		string overrideLabel;
 		bool wasButtonActivation;
 		object initialTarget;
 		
-		public CommandMenuItem (object commandId, CommandManager commandManager): base ("")
+		public CommandMenuItem (object commandId, CommandManager commandManager, string overrideLabel): base ("")
 		{
 			this.commandId = commandId;
 			this.commandManager = commandManager;
+			this.overrideLabel = overrideLabel;
 			ActionCommand cmd = commandManager.GetCommand (commandId) as ActionCommand;
 			if (cmd != null)
 				isArray = cmd.CommandArray;
 		}
 		
+		public CommandMenuItem (object commandId, CommandManager commandManager): this (commandId, commandManager, null)
+		{
+		}
+
 		void ICommandUserItem.Update (object initialTarget)
 		{
 			if (commandManager != null && !isArrayItem) {
@@ -173,10 +179,10 @@ namespace MonoDevelop.Components.Commands
 					accel_label.Text = String.Empty;
 				
 				if (cmdInfo.UseMarkup) {
-					label.Markup = cmdInfo.Text;
+					label.Markup = overrideLabel ?? cmdInfo.Text;
 					label.UseMarkup = true;
 				} else {
-					label.Text = cmdInfo.Text;
+					label.Text = overrideLabel ?? cmdInfo.Text;
 					label.UseMarkup = false;
 				}
 				
